# -----------------------------------------------------------------------------------------------------------
# Copyright (c) 2025 Huawei Technologies Co., Ltd.
# This program is free software, you can redistribute it and/or modify it under the terms and conditions of
# CANN Open Software License Agreement Version 2.0 (the "License").
# Please refer to the License for details. You may not use this file except in compliance with the License.
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
# See LICENSE in the root of the software repository for the full text of the License.
# -----------------------------------------------------------------------------------------------------------
if(NOT BUILD_OPEN_PROJECT)
    target_sources(ccl_kernel PRIVATE
        hccl_aicpu_interface.cc
        hccl_aicpu_transport_interface.cc
    )
endif()

if(BUILD_OPEN_PROJECT AND KERNEL_MODE)
    target_sources(ccl_kernel PRIVATE
        hccl_aicpu_interface.cc
        hccl_aicpu_transport_interface.cc
    )
endif()
add_subdirectory(aicpu_kfc)
add_subdirectory(common)
add_subdirectory(framework)
add_subdirectory(utils)
add_subdirectory(debug)